# osm_backend

./: .env  .gitignore  README.md  pyproject.toml
app/: main.py
app/api/routes/: __init__.py  health.py  info.py
app/core/: config.py
tests/: test_health.py
