[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-backend"
version = "0.1.0"
description = "A production-ready FastAPI backend service"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "fastapi>=0.95.0,<0.96.0",
    "uvicorn[standard]>=0.21.0,<0.22.0",
    "pydantic>=1.10.7,<2.0.0",  # Using Pydantic v1 to avoid Rust dependency
    "python-dotenv>=1.0.0,<2.0.0",
    "httpx>=0.24.0,<0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1,<8.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "black>=23.3.0,<24.0.0",
    "isort>=5.12.0,<6.0.0",
    "mypy>=1.2.0,<2.0.0",
    "ruff>=0.0.262,<0.1.0",
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
